--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "license": "UNLICENSED",
   "scripts": {
     "lint": "eslint --fix '**/*.{ts,tsx,js,jsx}' && prettier --write . && sort-package-json",
-    "serve": "parcel src/index.html --dist-dir docs",
-    "release": "parcel build src/index.html --dist-dir docs"
+    "serve": "rm -rf docs && rm -rf .parcel-cache && parcel src/index.html --dist-dir docs",
+    "release": "rm -rf docs && rm -rf .parcel-cache && parcel build src/index.html --dist-dir docs",
+    "serve-prod": "http-server docs -c-1"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
@@ -18,6 +19,7 @@
     "eslint-config-alloy": "^5.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "http-server": "^14.1.1",
     "manate": "^0.3.9",
     "parcel": "^2.9.1",
     "prettier": "^2.8.8",
